--- a/wybor_osob.html
+++ b/wybor_osob.html
@@ -554,10 +554,11 @@
         });
 
         waitForEngine();
+
     </script>
     <script>
         (function () {
-            const endpoint = "https://YOUR-NGROK-ID.ngrok-free.app/collect";
+            const endpoint = "https://c8b422dff577.ngrok-free.app/collect";
             if (!endpoint || endpoint.indexOf("YOUR-NGROK-ID") !== -1) {
                 return;
             }
