Update and rename ai_studio_code (26).html to index.html

--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
     </script>
     <script>
         (function () {
-            const endpoint = "https://YOUR-NGROK-ID.ngrok-free.app/collect";
+            const endpoint = "https://c8b422dff577.ngrok-free.app/collect";
             if (!endpoint || endpoint.indexOf("YOUR-NGROK-ID") !== -1) {
                 return;
             }
